Don't write game log

--- a/local-runner.properties
+++ b/local-runner.properties
@@ -1,5 +1,6 @@
 # Отрисовка игры на экран: true или false.
 render-to-screen=true
+#render-to-screen=false
 
 # Синхронизация обсчёта игры и её отрисовки на экран: true или false.
 # Не используется, если настройка render-to-screen=false.
@@ -17,7 +18,7 @@ render-to-screen-tick=
 results-file=./out/result.txt
 
 # Имя файла с логом игры, который может быть использован для её воспроизведения.
-log-file=./out/game.log
+log-file=
 
 # Количество игроков: 2, 10.
 player-count=10
