--- a/local-runner.properties
+++ b/local-runner.properties
@@ -88,4 +88,4 @@ seed=
 
 # Путь к каталогу с плагинами или пустая строка для работы без плагинов.
 # Необходимо скомпилировать плагин, чтобы он загрузился игровым симулятором.
-plugins-directory=
+plugins-directory=./out/visualizer
