Enable debug rendering

--- a/local-runner.properties
+++ b/local-runner.properties
@@ -4,7 +4,7 @@ render-to-screen=true
 
 # Синхронизация обсчёта игры и её отрисовки на экран: true или false.
 # Не используется, если настройка render-to-screen=false.
-render-to-screen-sync=false
+render-to-screen-sync=true
 
 # Размер окна визуализатора.
 # Не используется, если настройка render-to-screen=false.
@@ -88,4 +88,4 @@ seed=
 
 # Путь к каталогу с плагинами или пустая строка для работы без плагинов.
 # Необходимо скомпилировать плагин, чтобы он загрузился игровым симулятором.
-plugins-directory=
+plugins-directory=./out/plugin
