--- a/local-runner.properties
+++ b/local-runner.properties
@@ -33,14 +33,14 @@ player-count=10
 # Если количество игроков равно 2, используются только первые 2 типа.
 p1-type=Local
 p2-type=Quick
-p3-type=Quick
-p4-type=Quick
-p5-type=Quick
-p6-type=Quick
-p7-type=Quick
-p8-type=Quick
-p9-type=Quick
-p10-type=Quick
+p3-type=Empty
+p4-type=Empty
+p5-type=Empty
+p6-type=Empty
+p7-type=Empty
+p8-type=Empty
+p9-type=Empty
+p10-type=Empty
 
 # Имя стратегии для каждого из игроков или пустая строка для автоматического определения имени.
 # Если количество игроков равно 2, используются только первые 2 имени.
