--- a/local-runner.properties
+++ b/local-runner.properties
@@ -33,13 +33,13 @@ player-count=10
 # Если количество игроков равно 2, используются только первые 2 типа.
 p1-type=Local
 p2-type=Quick
-p3-type=Quick
+p3-type=Smart
 p4-type=Quick
-p5-type=Quick
+p5-type=Smart
 p6-type=Quick
-p7-type=Quick
+p7-type=Smart
 p8-type=Quick
-p9-type=Quick
+p9-type=Smart
 p10-type=Quick
 
 # Имя стратегии для каждого из игроков или пустая строка для автоматического определения имени.
