Implement cutting though trees

--- a/local-runner.properties
+++ b/local-runner.properties
@@ -31,16 +31,16 @@ player-count=10
 #   Keyboard - стратегия, управляемая с клавиатуры. Нельзя указывать более одного раза.
 #       Автоматически устанавливает настройки render-to-screen=true и render-to-screen-sync=true.
 # Если количество игроков равно 2, используются только первые 2 типа.
-p1-type=Smart
-p2-type=Smart
-p3-type=Local
-p4-type=Smart
-p5-type=Smart
-p6-type=Smart
-p7-type=Smart
-p8-type=Smart
-p9-type=Smart
-p10-type=Smart
+p1-type=Local
+p2-type=Empty
+p3-type=Empty
+p4-type=Empty
+p5-type=Empty
+p6-type=Empty
+p7-type=Empty
+p8-type=Empty
+p9-type=Empty
+p10-type=Empty
 
 # Имя стратегии для каждого из игроков или пустая строка для автоматического определения имени.
 # Если количество игроков равно 2, используются только первые 2 имени.
