local-runner.properties

--- a/local-runner.properties
+++ b/local-runner.properties
@@ -33,12 +33,12 @@ player-count=10
 # Если количество игроков равно 2, используются только первые 2 типа.
 p1-type=Local
 p2-type=Smart
-p3-type=Smart
+p3-type=Empty
 p4-type=Smart
 p5-type=Smart
-p6-type=Smart
+p6-type=Local
 p7-type=Smart
-p8-type=Smart
+p8-type=Empty
 p9-type=Smart
 p10-type=Smart
 
@@ -49,7 +49,7 @@ p2-name=
 p3-name=
 p4-name=
 p5-name=
-p6-name=
+p6-name=v15
 p7-name=
 p8-name=
 p9-name=
@@ -66,7 +66,7 @@ p2-startup-command=
 p3-startup-command=
 p4-startup-command=
 p5-startup-command=
-p6-startup-command=
+p6-startup-command=make run-strategy NAME=v15 PORT=${port}
 p7-startup-command=
 p8-startup-command=
 p9-startup-command=
