Revert to the v15 combat logic

--- a/local-runner.properties
+++ b/local-runner.properties
@@ -33,12 +33,12 @@ player-count=10
 # Если количество игроков равно 2, используются только первые 2 типа.
 p1-type=Local
 p2-type=Smart
-p3-type=Empty
+p3-type=Smart
 p4-type=Smart
 p5-type=Smart
 p6-type=Local
 p7-type=Smart
-p8-type=Empty
+p8-type=Smart
 p9-type=Smart
 p10-type=Smart
 
