--- a/local-runner.properties
+++ b/local-runner.properties
@@ -49,7 +49,7 @@ p2-name=
 p3-name=
 p4-name=
 p5-name=
-p6-name=v15
+p6-name=
 p7-name=
 p8-name=
 p9-name=
@@ -66,7 +66,7 @@ p2-startup-command=
 p3-startup-command=
 p4-startup-command=
 p5-startup-command=
-p6-startup-command=make run-strategy NAME=v15 PORT=${port}
+p6-startup-command=
 p7-startup-command=
 p8-startup-command=
 p9-startup-command=
@@ -78,7 +78,7 @@ base-adapter-port=31001
 
 # Данный флаг определяет доступность получения волшебниками новых уровней в результате накопления опыта, а также изучения умений.
 # Значения: true или false.
-skills-enabled=false
+skills-enabled=true
 
 # Число, которое игровой симулятор будет использовать для инициализации
 # генератора случайных чисел или пустая строка.
